# quatum_resistant_pake_protocols

./: README.md  create_tables.sql
qr_pake_protocols/: Cargo.toml
qr_pake_protocols/benches/: benchmark_kem_ae_pake.rs  benchmark_ocake_pake.rs  benchmark_tk_pake.rs  benchmark_tk_pake_auth.rs
qr_pake_protocols/examples/: incorrect_login.rs  interleaving_logins.rs  just_correct_login.rs  just_registration.rs  multiple_logins.rs  one_client.rs  parallel_logins.rs  server.rs  two_clients.rs  unregistered_client.rs
qr_pake_protocols/pake_protocol_executors/: Cargo.toml
qr_pake_protocols/pake_protocol_executors/src/: lib.rs
qr_pake_protocols/pake_protocol_executors/src/executors/b_pake_protocols/: generic_client.rs  generic_server.rs  mod.rs
qr_pake_protocols/pake_protocol_executors/src/executors/b_pake_protocols/bench_api/: kem_ae_pake.rs  mod.rs  ocake_pake.rs  tk_pake.rs
qr_pake_protocols/pake_protocol_executors/src/protocol_execution_logic/: mod.rs
qr_pake_protocols/pake_protocol_executors/src/protocol_execution_logic/b_pake_protocols/: mod.rs
qr_pake_protocols/pake_protocol_executors/src/protocol_execution_logic/b_pake_protocols/multi_client_handler/: client_handler.rs  mod.rs  server_handler.rs  storage_handler.rs
qr_pake_protocols/pake_protocol_executors/src/protocol_execution_logic/b_pake_protocols/multi_client_handler/kem_ae_pake/: client_side.rs  server_side.rs
qr_pake_protocols/pake_protocol_executors/src/protocol_execution_logic/b_pake_protocols/multi_client_handler/ocake_pake/: client_side.rs  server_side.rs
qr_pake_protocols/pake_protocol_executors/src/protocol_execution_logic/b_pake_protocols/multi_client_handler/tk_pake/: client_side.rs  server_side.rs
qr_pake_protocols/src/: base_converter.rs  encode_decode.rs  frodo_variant_wrapper.rs  lib.rs  mlkem_variant_wrapper.rs  overall_common_functionalities.rs  protocol_variants.rs
qr_pake_protocols/src/core_protocol_functionalities/b_pake_protocols/kem_ae_pake/: client.rs  common_details.rs  server.rs
qr_pake_protocols/src/core_protocol_functionalities/b_pake_protocols/ocake_pake/: client.rs  common_details.rs  mod.rs  server.rs
qr_pake_protocols/src/core_protocol_functionalities/b_pake_protocols/tk_pake/: client.rs  common_details.rs  server.rs
test_framework_api/: Cargo.toml
test_framework_api/src/: lib.rs  other_storage.rs
(+7 files in other folders)
